fixtures/oci1/invalid/bundle-schema-pattern/obt.jws
eyJhbGciOiJFZERTQSIsInR5cCI6IkpXUyIsImtpZCI6ImZpeHR1cmUtZWQyNTUxOSJ9.eyJpZCI6InRlc3QtZml4dHVyZS0wLjEuMCIsImRvbWFpbiI6InRlc3QtZml4dHVyZSIsInZlcnNpb24iOiIwLjEuMCIsInByb3ZpZGVySWQiOiJvbnRvbG9neTpwYWN0LWZpeHR1cmVzIiwidHJ1c3RUaWVyIjoiVGllcjEiLCJwb2xpY3lTbmFwc2hvdElkIjoic2hhMjU2Om5vdC1hLXZhbGlkLTY0LWJ5dGUtaGV4IiwiZmlsZXMiOnsiY29udGV4dCI6InNoYTI1NjphYjBmMmQzY2I3NmM5MmJhNDM2M2M0YzI2MmI1NWQ2OWZlNjdkMDI4MzI3MWY3YTEyNTNjMjZmNTkyZmEwMTVjIiwidm9jYWIiOiJzaGEyNTY6MTQwNGFiZWU4NjE2OTU4OGVkMWFlMTUxZmEwZGI4MTc3MjdjMWE0NTcxZDQxYjk0MTVmN2I3N2U2OTlhODcxOCJ9LCJwcmVjZWRlbmNlIjpbXSwiZGVueVdpbnMiOnRydWUsIm5iZiI6IjIwMjYtMDMtMDJUMDA6MDA6MDBaIiwiZXhwIjoiMjAzMC0wMy0wMlQwMDowMDowMFoiLCJyZXZFcG9jaCI6MX0.vrpMSC4het5N6wC6M2pegmRcCp1oMg-jc_yuByLoBGexUF1U99VUNdOH6DtBzd4WY32Am2CWZ3PJszh07mVsBw
